Fix pre overflow.

--- a/public/_static/page.css
+++ b/public/_static/page.css
@@ -7,6 +7,7 @@ html {
 
 pre {
 	tab-size: 2;
+	overflow: auto;
 }
 
 @media (min-width: 40em) {
